--- a/src/views/about.html
+++ b/src/views/about.html
@@ -1,12 +1,83 @@
 <div id="about" class="dn">
-    <div class="tc tl-ns">
-        <h3 class="black f2 fw6 tc code">About JeffConf Hamburg</h3>
-        
-        <div class="black mw6 tc center">
-            <p>
-                <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" id="Conference finance">Conference finance</h4>
-                    Our motivation for creating JeffConf Hamburg isn't money. In the event that the conference is profitable we will put the money back into the community and/or towards the next JeffConf Hamburg. We're committed to financial transparency and will publish the conference accounts on this page once they are finalised.
-            </p>
-        </div>
+    <div>
+        <h3 class="black f2 fw6 tc code" >About JeffConf Hamburg</h3>
+        <h4 class="black f2 fw6 tc code">Organisers</h4>
+
+         <div class="dt mw7 mw8-ns mt4 ph3 ph0-ns center w-100">
+
+             <div id="soenke" class="dt-row w-100 mb3">
+                 <div class="dt w-100 pv2 bb b--gray">
+
+                     <div class="dtc w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                         <p class="f4 mb0">
+                             Soenke Rumpler
+                         </p>
+                         <p class="f6" >
+                             Co-founder <a href="https://superluminar.io/">superluminar</a> and Serverless Hamburg user group organiser
+                         </p>
+                         <p class="f6">
+                         </p>
+                         <div class="tl">
+                             <a class="ph1 no-underline" title="Soenke on Twitter" href="https://twitter.com/s0enke" target="_blank">@@include('./icon-twitter.html')</a>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+             <div id="soenke" class="dt-row w-100 mb3">
+                 <div class="dt w-100 pv2 bb b--gray">
+                     <div class="dtc w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                         <p class="f4 mb0">
+                             Susanne Kaiser
+                         </p>
+                         <p class="f6" >
+                             CTO at Just Software AG
+                         </p>
+                         <p class="f6">
+                         </p>
+                         <div class="tl">
+                             <a class="ph1 no-underline" title="Susanne on Twitter" href="https://twitter.com/suksr" target="_blank">@@include('./icon-twitter.html')</a>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+             <div id="hendric" class="dt-row w-100 mb3">
+                 <div class="dt w-100 pv2 bb b--gray">
+                     <div class="dtc w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                         <p class="f4 mb0">
+                             Hendric Ruesch
+                         </p>
+                         <p class="f6" >
+                             Co-founder <a href="https://superluminar.io/">superluminar</a>
+                         </p>
+                         <p class="f6">
+                         </p>
+                         <div class="tl">
+                             <a class="ph1 no-underline" title="Hendric on Twitter" href="https://twitter.com/HendricRuesch" target="_blank">@@include('./icon-twitter.html')</a>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+             <div id="ben" class="dt-row w-100 mb3">
+                 <div class="dt w-100 pv2 bb b--gray">
+                     <div class="dtc w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                         <p class="f4 mb0">
+                             Ben Tisdall
+                         </p>
+                         <p class="f6" >
+                             DevOps Engineer at moovel GmbH and co-organiser Serverless Hamburg user group
+                         </p>
+                         <p class="f6">
+                         </p>
+                         <div class="tl">
+                             <a class="ph1 no-underline" title="Hendric on Twitter" href="https://twitter.com/HendricRuesch" target="_blank">@@include('./icon-twitter.html')</a>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+         </div>
+         <h4 class="black f2 fw6 tc code">Finance</h4>
+         <p>
+         Our motivation for creating JeffConf Hamburg isn't money. In the event that the conference is profitable we will put the money back into the community and/or towards the next JeffConf Hamburg. We're committed to financial transparency and will publish the conference accounts on this page once they are finalised.
+         </p>
     </div>
 </div>
