Fix Ben's Twitter link.

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -69,7 +69,7 @@
                          <p class="f6">
                          </p>
                          <div class="tl">
-                             <a class="ph1 no-underline" title="Hendric on Twitter" href="https://twitter.com/HendricRuesch" target="_blank">@@include('./icon-twitter.html')</a>
+                             <a class="ph1 no-underline" title="Ben on Twitter" href="https://twitter.com/btisdall" target="_blank">@@include('./icon-twitter.html')</a>
                          </div>
                      </div>
                  </div>
