sdd provided description for Larsens talk

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -147,7 +147,7 @@
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Putting the F in FaaS: Functional Composition in a Serverless World</p>
-                  <p class="f6 fw4"></p>
+                  <p class="f6 fw4">What are the best patterns for composing serverless applications? Where to look for inspiration? In this talk, Lars describes how functional programming patterns can be used for FaaS.</p>
               </div>
           </div>
 
