fix soenkes name

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -10,7 +10,7 @@
 
                      <div class="dtc w-80 pa2 pb0 tl nested-copy-line-height v-top">
                          <p class="f4 mb0">
-                             Soenke Rumpler
+                             Soenke Ruempler
                          </p>
                          <p class="f6" >
                              Co-founder <a href="https://superluminar.io/">superluminar</a> and Serverless Hamburg user group organiser
