fix duplicate id on about page

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -23,7 +23,7 @@
                      </div>
                  </div>
              </div>
-             <div id="soenke" class="dt-row w-100 mb3">
+             <div id="susanne" class="dt-row w-100 mb3">
                  <div class="dt w-100 pv2 bb b--gray">
                      <div class="dtc w-80 pa2 pb0 tl nested-copy-line-height v-top">
                          <p class="f4 mb0">
