prelimary workshop page with confirmed workshops

--- a/src/views/header.html
+++ b/src/views/header.html
@@ -10,6 +10,7 @@
       <div onclick="changePage('home')" data-page="home" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Home</div>
       <div onclick="changePage('call-for-speakers-workshops')" data-page="call-for-speakers-workshops" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">CfP</div>
       <div onclick="changePage('agenda')" data-page="agenda" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Agenda</div>
+      <div onclick="changePage('workshops')" data-page="workshops" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Workshops</div>
       <div onclick="changePage('speakers')" data-page="speakers" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Speakers</div>
       <div onclick="changePage('venue')" data-page="venue" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Venue</div>
       <div onclick="changePage('diversity')" data-page="diversity" class="nav-link f5 fw4 pointer underline-hover dib pa1 pa2-ns">Diversity</div>
