--- a/src/views/index.html
+++ b/src/views/index.html
@@ -106,6 +106,7 @@
       @@include('./call-for-speakers-workshops.html')
       @@include('./speakers.html')
       @@include('./agenda.html')
+      @@include('./workshops.html')
       @@include('./venue.html')
       @@include('./diversity.html')
       @@include('./coc.html')
