--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -1,11 +1,7 @@
 <div id="agenda" class="dn">
   <div class="tc tl-ns">
-      <h3 class="black f2 fw6 tc code">Agenda</h3>
+      <h3 class="black f2 fw6 tc code">Agenda Conference Day (Feb 16th)</h3>
 
-      <h2 class="black f3 fw6 tc code">Workshop Day (Feb 15th)</h2>
-      <div class="b tc">Details coming soon!</div>
-
-      <h2 class="black f3 fw6 tc code">Conference Day (Feb 16th)</h2>
       <div class="b tc">We will add talks as they get confirmed! Agenda still subject to change!</div>
 
       <div class="dt ba b--black-50 mw7 center">
