link to speaker on agenda

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -22,7 +22,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Simon Wardley
+                  <a href="/speakers#simonw" class="black">Simon Wardley</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Keynote</p>
@@ -35,7 +35,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Manu Rink
+                  <a href="/speakers#manur" class="black">Manu Rink</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">TBA</p>
@@ -48,7 +48,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Alex Casalboni
+                  <a href="/speakers#alexc" class="black">Alex Casalboni</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">TBA</p>
@@ -61,7 +61,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Paul Johnston
+                  <a href="/speakers#paulj" class="black">Paul Johnston</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">TBA</p>
@@ -74,7 +74,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Anna Doubková
+                  <a href="/speakers#annad" class="black">Anna Doubková</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">TBA</p>
@@ -87,7 +87,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Yan Cui
+                  <a href="/speakers#yanc" class="black">Yan Cui</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Serverless in production, an experience report</p>
@@ -100,7 +100,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Oliver Zeigermann
+                  <a href="/speakers#oliverz" class="black">Oliver Zeigermann</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Serverless Machine Learning</p>
@@ -113,7 +113,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Daniel Buchholz
+                  <a href="/speakers#danielb" class="black">Daniel Buchholz</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Rule-based dispatching of events to a serverless services armada</p>
@@ -126,7 +126,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Philipp Müns
+                  <a href="/speakers#philippm" class="black">Philipp Müns</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">TBA</p>
@@ -139,7 +139,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Lars Trieloff
+                  <a href="/speakers#larst" class="black">Lars Trieloff</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Putting the F in FaaS: Functional Composition in a Serverless World</p>
@@ -152,7 +152,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Cyle Riggs
+                  <a href="/speakers#cyler" class="black">Cyle Riggs</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Live Coding: A Serverless Platform in 100 lines</p>
@@ -165,7 +165,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Subbu Allamaraju
+                  <a href="/speakers#subbua" class="black">Subbu Allamaraju</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">How to sell serverless to your colleagues</p>
@@ -177,7 +177,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  Michael Wittig
+                  <a href="/speakers#michaelw" class="black">Michael Wittig</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Evolutionary Serverless Architecture: From hackathon to product</p>
