--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -8,7 +8,7 @@
 
             <p class="b tc w-100">It's not too late to propose your talk! The <a href="papercall.io/cfps/751/submissions/new">Call for Speakers</a>  is still open until Jan 15th 2018!</p>
 
-            <div id="manurink" class="dt-row w-100 mb3">
+            <div id="manur" class="dt-row w-100 mb3">
                 <div class="dt w-100 pv2 bb b--gray">
 
                     <div class="dtc w-80 pa2 pb0 tl nested-copy-line-height v-top">
@@ -129,7 +129,7 @@
                 </div>
             </div>
 
-            <div id="yancui" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div id="yanc" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
                 <div class="dt w-100 pv2 bb b--gray">
                     <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
                         <p class="mb0">
