--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -26,6 +26,16 @@
                               </a>
                           </div>
                           <div class="w-50-ns center pa3">
+                              <a id="Nordcloud" class="no-underline pointer db center" href="https://nordcloud.com/" target="_blank" title="nordcloud">
+                                  <img class="w-40" src="/imgs/Nordcloud_Large_Black.png" alt="nordcloud" title="nordcloud" />
+                              </a>
+                          </div>
+                          <div class="w-50-ns center pa3">
+                              <a id="binaris" class="no-underline pointer db center" href="https://binaris.com/" target="_blank" title="binaris">
+                                  <img class="w-40" src="/imgs/20170915-logo.png" alt="binaris" title="binaris" />
+                              </a>
+                          </div>
+                          <div class="w-50-ns center pa3">
                               <a id="serverless-sponsor-website" class="no-underline pointer db center" href="https://serverless.com/" target="_blank" title="Serverless">
                                   <img class="w-30" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
                               </a>
@@ -43,6 +53,11 @@
                           <div class="w-50-ns center pa3">
                               <a id="innovocloud" class="no-underline pointer db center" href="https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
                                   <img class="w-30" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
+                              </a>
+                          </div>
+                          <div class="w-50-ns center pa3">
+                              <a id="GCP" class="no-underline pointer db center" href="https://cloud.google.com" target="_blank" title="GCP">
+                                  <img class="w-30" src="/imgs/Google_Cloud_Platform_Logo.png" alt="GCP" title="GCP" />
                               </a>
                           </div>
   <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
