Gillian Armstrong is a confirmed JeffConf Hamburg speaker

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -399,5 +399,35 @@
 
             </div>
         </div>
+
+        <div id="gilliana" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/gillian-armstrong.jpg" alt="Photo of Gillian" title="Gillian Armstrong" class="grow"/>
+                </div>
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Gillian Armstrong
+                    </p>
+                    <p class="f6 gray mt0">
+                        Liberty Information Technology
+                    </p>
+                    <p class="f6">
+                        Gillian works as Technical Lead of the Cognitive Technologies team in the Applied Innovation unit in Liberty IT. Her team is focused on exploring and using innovative technology in interesting new ways. At the moment she is working on Conversational AI design and development, mostly within the AWS ecosystem. She has more than a decade’s worth of experience in many technologies across the full stack, but her passion is for where technology meets humans in the user interface and experience. She loves being a software engineer as it allows her not just to think up big ideas, but also to make them a reality.
+                    </p>
+                    <p class="f6">
+                        Pronouns: she/her
+                    </p>
+                    <div class="tr">
+                        <a class="no-underline orange f6 fw1 ph1 v-top" href="http://virtualgill.io" target="_blank">virtualgill.io</a>
+                        <a class="ph1 no-underline" title="Gillian on Twitter" href="https://twitter.com/virtualgill" target="_blank">@@include('./icon-twitter.html')</a>
+                        <a class="ph1 no-underline" title="Gillian on Medium" href="https://medium.com/@virtualgill" target="_blank">@@include('./icon-medium.html')</a>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
