--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -185,6 +185,18 @@
               </div>
           </div>
 
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  <a href="/speakers#gilliana" class="black">Gillian Armstrong</a>
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">TBA</p>
+              </div>
+          </div>
+
       </div>
 
 
