Space Apes is a company sponsor for Yan Cui
so they get listed on the website

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -61,6 +61,14 @@
             </a>
         </div>
 
+        <h4 class="black f3 fw6 tc code mt2 mb1 mb0-ns">Company sponsors</h4>
+
+        <div class="w-50-ns center pa3">
+            <a id="space-ape" class="no-underline pointer db center" href="http://www.spaceapegames.com/" target="_blank" title="Space Ape">
+                <img class="w-30" src="/imgs/space-ape.png" alt="Space Ape" title="Space Ape" />
+            </a>
+        </div>
+
         <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
             <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
                 <div class="fl mw5-ns ml6">
