update yan cui's bio as requested

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -139,7 +139,11 @@
                             Space Ape Games
                         </p>
                         <p class="f6" >
-                            Yan is a polyglot developer and architect, he is a regular speaker at user groups and conferences internationally. Yan is the author of AWS Lambda in Motion, a co-author of F# Deep Dives, and he keeps an active blog at <a href="http://theburningmonk.com" target="_blank">theburningmonk.com</a> where he shares his thoughts on topics such as AWS, serverless, functional programming and chaos engineering.
+                            Yan is an experienced engineer who has worked with AWS for near 10 years. He has been an architect and lead developer with a variety of industries ranging from investment banks, e-commence to mobile gaming. In the last 2 years he has worked extensively with AWS Lambda in production, and he has been very active in sharing his experiences and the lessons he has learnt, some of his work has even made their way into the Well-Architected whitepaper published by AWS.<br><br>
+
+                            Yan is polyglot in both spoken and programming languages, he is fluent in both English and Mandarin, and can count C#, F#, Scala, Node.js and Erlang amongst programming languages that he has worked with professionally. Although he enjoys learning different programming languages and paradigms, he still holds F# as his undisputed favourite.<br><br>
+
+                            Yan is a regular speaker at user groups and conferences internationally, and he is also the author of AWS Lambda in Motion and a co-author of F# Deep Dives. In his spare time he keeps an active blog at <a href="http://theburningmonk.com" target="_blank">theburningmonk.com</a> where he shares his thoughts on topics such as AWS, serverless, functional programming and chaos engineering.
                         </p>
                         <p class="f6">
                             Pronouns: he/him
