--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -10,58 +10,79 @@
         </div>
 
         <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor" id="sponsors">Sponsors</h4>
-        <div class="w-50-ns center pa3">
-            <a id="aws-sponsor-website" class="no-underline pointer db center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
-                <img class="w-50" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="microsoft-sponsor-website" class="no-underline pointer db center" href="https://azure.com/" target="_blank" title="microsoft">
-                <img class="w-40" src="/imgs/microsoft.svg" alt="microsoft" title="microsoft" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="moovel" class="no-underline pointer db center" href="https://moovel.com/" target="_blank" title="moovel">
-                <img class="w-40" src="/imgs/moovel-text.png" alt="moovel" title="moovel" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="Nordcloud" class="no-underline pointer db center" href="https://nordcloud.com/" target="_blank" title="nordcloud">
-                <img class="w-40" src="/imgs/Nordcloud_Large_Black.png" alt="nordcloud" title="nordcloud" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="binaris" class="no-underline pointer db center" href="https://binaris.com/" target="_blank" title="binaris">
-                <img class="w-40" src="/imgs/20170915-logo.png" alt="binaris" title="binaris" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="serverless-sponsor-website" class="no-underline pointer db center" href="https://serverless.com/" target="_blank" title="Serverless">
-                <img class="w-30" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="silpion" class="no-underline pointer db center" href="https://silpion.de/" target="_blank" title="silpion">
-                <img class="w-30" src="/imgs/Silpion-Logo-Schriftzug.png" alt="silpion" title="silpion" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="sinnerschrader" class="no-underline pointer db center" href="https://sinnerschrader.com/" target="_blank" title="SinnerSchrader">
-                <img class="w-30" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="innovocloud" class="no-underline pointer db center" href="https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
-                <img class="w-30" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
-            </a>
-        </div>
-        <div class="w-50-ns center pa3">
-            <a id="GCP" class="no-underline pointer db center" href="https://cloud.google.com" target="_blank" title="GCP">
-                <img class="w-30" src="/imgs/Google_Cloud_Platform_Logo.png" alt="GCP" title="GCP" />
-            </a>
+
+        <div class="fl-ns w-20-ns">
+
+            <div class="w-100-ns center pa3">
+                <a id="aws-sponsor-website" class="no-underline pointer db center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
+                    <img class="w-100" src="/imgs/aws-new.svg" alt="AWS" title="AWS" />
+                </a>
+            </div>
         </div>
 
-        <h4 class="black f3 fw6 tc code mt2 mb1 mb0-ns">Company sponsors</h4>
+        <div class="fl-ns w-30-ns">
+            <div>
+                <div class="fl-ns w-50-ns center pa3">
+                    <a id="microsoft-sponsor-website" class="no-underline pointer db center" href="https://azure.com/" target="_blank" title="microsoft">
+                        <img class="w-100-ns w-50" src="/imgs/microsoft.svg" alt="microsoft" title="microsoft" />
+                    </a>
+                </div>
+                <div class="fl-ns w-50-ns center pa3">
+                    <a id="moovel" class="no-underline pointer db center" href="https://moovel.com/" target="_blank" title="moovel">
+                        <img class="w-100-ns w-50" src="/imgs/moovel-text.png" alt="moovel" title="moovel" />
+                    </a>
+                </div>
+            </div>
+            <div class="fl-ns w-100-ns">
+                <div class="fl-ns w-50-ns center pa3">
+                    <a id="Nordcloud" class="no-underline pointer db center" href="https://nordcloud.com/" target="_blank" title="nordcloud">
+                        <img class="w-100-ns w-50" src="/imgs/Nordcloud_Large_Black.png" alt="nordcloud" title="nordcloud" />
+                    </a>
+                </div>
+                <div class="fl-ns w-50-ns center pa3">
+                    <a id="binaris" class="no-underline pointer db center" href="https://binaris.com/" target="_blank" title="binaris">
+                        <img class="w-100-ns w-50" src="/imgs/20170915-logo.png" alt="binaris" title="binaris" />
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="fl-ns w-50-ns">
+            <div class="fl-ns w-100-ns">
+                <div class="fl-ns w-30-ns center pa3">
+                    <a id="serverless-sponsor-website" class="no-underline pointer db center" href="https://serverless.com/" target="_blank" title="Serverless">
+                        <img class="w-70-ns w-30" src="/imgs/serverless.png" alt="Serverless" title="Serverless" />
+                    </a>
+                </div>
+                <div class="fl-ns w-30-ns center pa3">
+                    <a id="silpion" class="no-underline pointer db center" href="https://silpion.de/" target="_blank" title="silpion">
+                        <img class="w-70-ns w-30" src="/imgs/Silpion-Logo-Schriftzug.png" alt="silpion" title="silpion" />
+                    </a>
+                </div>
+                <div class="fl-ns w-30-ns center pa3">
+                    <a id="sinnerschrader" class="no-underline pointer db center" href="https://sinnerschrader.com/" target="_blank" title="SinnerSchrader">
+                        <img class="w-70-ns w-30" src="/imgs/s2.jpg" alt="SinnerSchrader" title="SinnerSchrader" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="fl-ns w-100-ns">
+                <div class="fl-ns w-30-ns center pa3">
+                    <a id="innovocloud" class="no-underline pointer db center" href="https://www.innovo-cloud.de/" target="_blank" title="innovo cloud">
+                        <img class="w-70-ns w-30" src="/imgs/iNNOVO_logo.jpg" alt="iNNOVO Cloud" title="iNNOVO Cloud" />
+                    </a>
+                </div>
+                <div class="fl-ns w-30-ns center pa3">
+                    <a id="GCP" class="no-underline pointer db center" href="https://cloud.google.com" target="_blank" title="GCP">
+                        <img class="w-70-ns w-30" src="/imgs/Google_Cloud_Platform_Logo.png" alt="GCP" title="GCP" />
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="w-100 tc pt3 cb">
+
+        <h4 class="black f3 fw6 tc code mt2 mb1 mb0-ns cf">Company sponsors</h4>
 
         <div class="w-50-ns center pa3">
             <a id="space-ape" class="no-underline pointer db center" href="http://www.spaceapegames.com/" target="_blank" title="Space Ape">
