--- a/src/views/home.html
+++ b/src/views/home.html
@@ -18,7 +18,7 @@
               <span class="fw6 f5 f4-ns mv0 white underline-hover" >Venue</span>
             </h3>
             <p class="f6 lh-copy measure mt2 white-90" >
-              Altonaer Mueseum Hamburg is a mix of tradition and modernity in Hamburg, and an iconic location to spread cultural ideas.
+              Altonaer Museum Hamburg is a mix of tradition and modernity in Hamburg, and an iconic location to spread cultural ideas.
             </p>
           </div>
         </article>
