new-company-sponsor-appmotion

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -89,6 +89,11 @@
                 <img class="w-30" src="/imgs/space-ape.png" alt="Space Ape" title="Space Ape" />
             </a>
         </div>
+ <div class="w-50-ns center pa3">
+            <a id="appmotion" class="no-underline pointer db center" href="http://www.appmotion.de/" target="_blank" title="Appmotion">
+                <img class="w-30" src="/imgs/appmotion_logo_dreizeilig.png" alt="Appmotion" title="Appmotion" />
+            </a>
+        </div>
 
         <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
             <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
