MOIA is a sponsor

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -78,6 +78,15 @@
                     </a>
                 </div>
             </div>
+
+            <div class="fl-ns w-100-ns">
+                <div class="fl-ns w-30-ns center pa3">
+                    <a id="moia" class="no-underline pointer db center" href="https://moia.io/" target="_blank" title="MOIA">
+                        <img class="w-70-ns w-30" src="/imgs/moia.png" alt="MOIA" title="MOIA" />
+                    </a>
+                </div>
+            </div>
+
         </div>
     </div>
     <div class="w-100 tc pt3 cb">
