Danilo Poccia is a confirmed JeffConf Hamburg speaker

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -197,6 +197,20 @@
               </div>
           </div>
 
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  <a href="/speakers#danilop" class="black">Danilo Poccia</a>
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">Real-Time Serverless Back Ends with GraphQL</p>
+                  <p class="f6 fw4">GraphQL is an open standard that lets you request, change, and subscribe to the exact data you need in a single network request. This makes prototyping and building data-intensive applications as simple as writing a few lines of code. In this session we’ll introduce the core concepts of GraphQL and put that into practice with real-world implementations using tools such as AWS Lambda and AWS AppSync to deliver real-time collaborative experiences for web and mobile apps, using multiple data sources, managing off-line users’ data, and resolving data conflicts.</p>
+              </div>
+          </div>
+
+
       </div>
 
 
