--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -433,5 +433,41 @@
             </div>
         </div>
 
+        <div id="danilop" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Danilo Poccia
+                    </p>
+                    <p class="f6 gray mt0">
+                        Amazon Web Services
+                    </p>
+                    <p class="f6">
+                        Danilo works with startups and companies of any size to support their innovation. In his role as Technical Evangelist at Amazon Web Services, he leverages his experience to help people bringing their ideas to life, focusing on event-driven programming and serverless architectures, and on the technical and business impact of machine learning and edge computing. He is author of AWS Lambda in Action from Manning.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+
+                    <div class="tl">
+                        <a class="ph1 no-underline" title="Danilo on Twitter" href="https://twitter.com/danilop" target="_blank">@@include('./icon-twitter.html')</a>
+
+                        <a class="ph1 no-underline" title="Danilo on LinkedIn" href="https://www.linkedin.com/in/dpoccia/" target="_blank">@@include('./icon-linkedin.html')</a>
+
+                        <a class="ph1 no-underline" title="Danilo on Medium" href="https://medium.com/@danilop" target="_blank">@@include('./icon-medium.html')</a>
+
+                    </div>
+
+                </div>
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/danilo-poccia.jpg" alt="Photo of Danilo" title="Danilo Poccia" class="grow"/>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
     </div>
 </div>
