Gillian Armstrongs talk

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -193,7 +193,8 @@
                   <a href="/speakers#gilliana" class="black">Gillian Armstrong</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f5 fw6 v-mid">Conversational AI and Serverless</p>
+                  <p class="f6 fw4">Conversational Interfaces are rapidly taking over the world. In this talk we’ll look at how Serverless technologies can be used for rapid chatbot development, specifically with Amazon Lex and Amazon Alexa. We’ll talk about lessons learned from my own experiences building an enterprise digital assistant, and how using a Natural Language Understanding interface changes how we think about and design our applications.</p>
               </div>
           </div>
 
