publish Simon Wardley talk and abstract

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -25,8 +25,10 @@
                   <a href="/speakers#simonw" class="black">Simon Wardley</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">Keynote</p>
-                  <p class="f6 fw4"></p>
+                  <p class="f5 fw6 v-mid">Why the Fuss about Serverless?</p>
+                  <p class="f6 fw4">We live in a competitive world. That competition forces change. It has always forced change. Change is normal. The question is not whether our organizations will change, that’s a given, but can we see this change before it hits us, do we know where we’re heading or are we simply floating aimlessly being carried by a river? It certainly feels that way sometimes. To answer the question, we need to understand our landscape, the economic forces at play, the context we operate within and our situational awareness of this. Can we navigate the waters, can we see a storm coming or are we being battered by rocks because we refuse to look?</p>
+                  <p class="f6 fw4">
+                      During this talk, we will examine the level of situational awareness within business, why it matters and whether we can anticipate and exploit change before it hits us. We look into the changes that are occurring with the development of serverless, why now, what’s important to it, how it will change the way we do business and how this interacts with the API economy. There’s a lot of fuss about serverless, and in this session, we will try to paint a clearer picture, or at the very least, a map of where it is going.</p>
               </div>
           </div>
 
