publicise alex's casalbonis talk topic

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -53,8 +53,10 @@
                   <a href="/speakers#alexc" class="black">Alex Casalboni</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
-                  <p class="f6 fw4"></p>
+                  <p class="f5 fw6 v-mid">Serverless Data Warehousing & Data Analysis on AWS</p>
+                  <p class="f6 fw4">Data science teams need to reduce storage and maintenance costs, and at the same time provide analytics tools for data analysts and scientists.<br>
+                      How can we make data collection and data analysis exciting, performant, and cost-effective in the Cloud?<br>
+                      Alex will connect the dots around the data processing building blocks provided by AWS, without managing any servers!</p>
               </div>
           </div>
 
