publicise philipp muens talk topic

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -133,8 +133,19 @@
                   <a href="/speakers#philippm" class="black">Philipp Müns</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
-                  <p class="f6 fw4"></p>
+                  <p class="f5 fw6 v-mid">Using the Event Gateway to build serverless multi-cloud applications</p>
+                  <p class="f6 fw4">As serverless technologies go mainstream many cloud providers are revamping their service offerings, adding more sophisticated cloud solutions and making it possible to create stellar applications in a breeze.<br>
+
+                      Serverless applications usually make heavy use of different service offerings. Most of the time those services are Cloud provider specific, since they’re easy to integrate and work with.<br>
+
+                      But what about services which are only available on another Cloud provider infrastructure?
+                      How could you consume them without the need to go all-in and re-write your whole application for this Cloud provider?<br>
+
+                      The <a href="https://github.com/serverless/event-gateway" class="black" target="_blank">Event Gateway</a> is the answer to those questions.
+                      The Event Gateway acts as the central hub and broker, orchestrating event flows across decoupled services, not matter where they are located.<br>
+
+                      Curious how the Event Gateway enables frictionless multi-cloud applications? Join this session to learn how.
+                  </p>
               </div>
           </div>
 
