Chatbot workshop is confirmed.

--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -70,7 +70,19 @@
 
           <div class="bg-near-white">
               <div class="v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f5 fw6 v-mid">Serverless Chatbot Development (all)</p>
+                  <p class="f6 fw4">How many buzzwords can you fit into a single workshop while still keeping it useful? Let’s see! This workshop will teach you how to build serverless chatbot for multiple platforms with NLP integration. It will also show you how to test your chatbot.</p>
+                  <p class="f6 fw4">Topics:</p>
+                  <ul class="f6 fw4">
+                    <li>Why serverless and chatbots are good fit</li>
+                    <li>How to create a chatbot for fb messenger and telegram</li>
+                    <li>How to store state in serverless chatbot</li>
+                    <li>How to integrate you chatbot with the third-party service</li>
+                    <li>How to send scheduled messages</li>
+                    <li>How to integrate NLP to your chatbot</li>
+                    <li>How to test your chatbot</li>
+                    <li>Basics of good chatbot design</li>
+                  </ul>
               </div>
           </div>
 
