--- a/src/views/workshops.html
+++ b/src/views/workshops.html
@@ -29,7 +29,15 @@
 
           <div class="bg-near-white">
               <div class="v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f5 fw6 v-mid">Designing, building, and operating FaaS-based microservices on Azure</p>
+                  <p class="f6 fw4">In this workshop we'll explore how to build and run a FaaS-based microservices architecture on Azure. Topics include:</p>
+                  <ul class="f6 fw4">
+                    <li>Using Domain Driven Design (DDD) to design a microservices architecture.</li>
+                    <li>Choosing the right Azure technologies for serverless functions compute, storage, messaging, and other elements of the design.</li>
+                    <li>Understanding microservices design patterns.</li>
+                    <li>Designing for resiliency, scalability, and performance.</li>
+                    <li>Building a CI/CD pipeline.</li>
+                  </ul>
               </div>
           </div>
 
