--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -68,8 +68,8 @@
                   <a href="/speakers#paulj" class="black">Paul Johnston</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
-                  <p class="f6 fw4"></p>
+                  <p class="f5 fw6 v-mid">Managing Serverless Development</p>
+                  <p class="f6 fw4">Serverless is still an emerging space, and many people are trying to push current management practices into the serverless space. Does this work? Is there a better way? What lessons can we learn from this emergent space?</p>
               </div>
           </div>
 
