publish Annas Talk

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -81,8 +81,8 @@
                   <a href="/speakers#annad" class="black">Anna Doubková</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
-                  <p class="f6 fw4"></p>
+                  <p class="f5 fw6 v-mid">Gotchas in Serverless Framework</p>
+                  <p class="f6 fw4">Did you know it's not very hard to hit a cap of CloudFormation resources? Or that file size changes drastically when packing your code with webpack without correct settings? In this talk, you'll learn how to use Serverless Framework on a large production scale without having to figure out all these things the hard way.</p>
               </div>
           </div>
 
