publish speaker information provided by manu

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -18,11 +18,13 @@
                             Manu Rink* is a mobile enthusiast long before the dawn of the smartphone. After working in the enterprise business, she finally dropped the mic, made her passion to her profession and worked as a mobile software engineer and architect for a couple of #1 apps. Currently she shares her passion as a tech evangelist @Microsoft and inspires a wide audience of techies for her beloved topics including mobile development, serverless computing and gaming.<br><br>*raised by Super Mario and Yoshi
                         </p>
                         <p class="f6">
+                            Pronouns: she/her
                         </p>
                         <div class="tl">
                             <a class="ph1 no-underline" title="Manu on Twitter" href="https://twitter.com/codeprincess" target="_blank">@@include('./icon-twitter.html')</a>
+                            <a class="ph1 no-underline" title="Manu on LinkedIn" href="https://www.linkedin.com/in/codeprincess/" target="_blank">@@include('./icon-linkedin.html')</a>
 
-
+                            <a class="ph1 no-underline" title="Manu on Medium" href="https://medium.com/@codeprincess" target="_blank">@@include('./icon-medium.html')</a>
                         </div>
 
                     </div>
