--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -100,7 +100,11 @@
                 <img class="w-30" src="/imgs/appmotion_logo_dreizeilig.png" alt="Appmotion" title="Appmotion" />
             </a>
         </div>
-
+ <div class="w-50-ns center pa3">
+            <a id="25hours" class="no-underline pointer db center" href="https://www.25hours-hotels.com/hotels/hamburg/number-one" target="_blank" title="25hours">
+                <img class="w-30" src="/25h.png" alt="25hours Hotel" title="25hours Hotel" />
+            </a>
+        </div>
         <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
             <div class="w-100 mw8-l mw6-m ph2 ph0-ns center">
                 <div class="fl mw5-ns ml6">
