--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -102,7 +102,7 @@
         </div>
  <div class="w-50-ns center pa3">
             <a id="25hours" class="no-underline pointer db center" href="https://www.25hours-hotels.com/hotels/hamburg/number-one" target="_blank" title="25hours">
-                <img class="w-30" src="/25h.png" alt="25hours Hotel" title="25hours Hotel" />
+                <img class="w-30" src="/imgs/25h.png" alt="25hours Hotel" title="25hours Hotel" />
             </a>
         </div>
         <div class="w-100 pt3 pb6 mt2 hamburg-red-bg white-90 center">
