--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -184,6 +184,10 @@
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">How to sell serverless to your colleagues</p>
+
+                  <p class="f6 fw4">You can talk all day long to your colleagues about the virtues of serverless patterns. You’re sure to hear hesitant responses with a few “but”s. Some of those responses will be driven by today’s limitations and constraints, while the rest will be based on their perspectives of cloud, portability, lock-in, cost etc.<br><br>
+
+                      In this talk, I want to walk through what has been happening in the industry to paint a picture of platform of the future, where functions and events fit, and how to prepare your colleagues for that future. We will also see how some of those “but”s may driven by past habits, culture and legacy, and what we can do to get past those.</p>
               </div>
           </div>
 
