publish title and abstract provided by manu

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -40,8 +40,12 @@
                   <a href="/speakers#manur" class="black">Manu Rink</a>
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
-                  <p class="f6 fw4"></p>
+                  <p class="f5 fw6 v-mid">You shall not FaaS!</p>
+                  <p class="f6 fw4">"Serverless" or FaaS is with no doubt the latest trend in the cloud computing world. No wonder! It claims that everybody can deploy and host services in the cloud in no time, auto scaled, fully managed by the hosting platform and most importantly - super cost effective. A dream for every developer, admin or devops.<br>
+
+                      But can this dream really be true? You already might smell the rat :)<br>
+
+                      This talk wants to show what you better not shall do with serverless technologies, which pitfalls you should vastly avoid and how you prohibit your services from burning senseless money out of your pockets. But no worries! There will be a happy end with a bunch of hints and scenarios on how to get full bliss from our beloved Jeff &lt;3</p>
               </div>
           </div>
 
