aakra is sponsor

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -74,12 +74,20 @@
                 </div>
                 <div class="fl-ns w-30-ns center pa3">
                     <a id="GCP" class="no-underline pointer db center" href="https://cloud.google.com" target="_blank" title="GCP">
-                        <img class="w-70-ns w-30" src="/imgs/Google_Cloud_Platform_Logo.png" alt="GCP" title="GCP" />
+                        <img class="w-70-ns w-30" src="/imgs/google-cloud.png" alt="GCP" title="GCP" />
                     </a>
                 </div>
                 <div class="fl-ns w-30-ns center pa3">
                     <a id="moia" class="no-underline pointer db center" href="https://moia.io/" target="_blank" title="MOIA">
                         <img class="w-70-ns w-30" src="/imgs/moia.png" alt="MOIA" title="MOIA" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="fl-ns w-100-ns">
+                <div class="fl-ns w-30-ns center pa3">
+                    <a id="akra" class="no-underline pointer db center" href="https://akra.de/" target="_blank" title="akra">
+                        <img class="w-70-ns w-30" src="/imgs/akra-logo.png" alt="akra" title="akra" />
                     </a>
                 </div>
             </div>
